--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", "Shrikhand";
+  overflow-x: hidden;
 }
 a:link {
   text-decoration: none;
@@ -381,7 +382,7 @@ footer {
   }
 }
 /** Desktop & Laptop **/
-@media only screen and (min-width: 1224px) {
+@media only screen and (min-width: 1920px) {
   h2 {
     font-size: x-large;
     margin-left: 4rem;
@@ -437,7 +438,7 @@ footer {
 }
 
 /** 4k Desktop **/
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 2560px) {
   body {
     width: 80%;
     margin: auto;
